[Update]: update work expirence, skills and minor fixes

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -10,12 +10,12 @@
   uni: The University of Melbourne
   year: 2016 - 2017
   awards: 
-    - award: Smile Detector Project
+    - award: Smile Detector
 
 - degree: Bachelor of Biomedicine
   uni: The University of Melbourne
   year: 2013 - 2015
   awards: 
-    - award: major in Cell and Developmental Biology
+    - award: major in Cell Developmental Biology
     - award: "weighted average mark: 83/100"
     
