--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -3,20 +3,20 @@
 
 # languages
 - skill: Web Framework
-  description: .NET / Laravel
+  description: .NET (C#) / Laravel (PHP) /
 - skill: Backend Languages
   description: C# / Java / PHP
 - skill: Frontend Framework
-  description: Blazor / VueJs / React / JQuery
+  description: VueJs / Blazor / Angular / JQuery
 - skill: Frontend Languages
-  description: HTML5 / CSS / Javascript / C#
+  description: HTML / CSS / Javascript / Typescript /C#
 - skill: Database
   description: MSSQL / MySQL / Firebase / Realm
 - skill: Cloud Computing
-  description: AWS / Azure
+  description: Azure
 - skill: Git
   description: Git / Sourcetree / TortoiseGit
 - skill: Scrum/Agile
-  description: Trello / Jira / Azure DevOps
+  description: Azure DevOps / Trello / Jira 
 - skill: Mobile Development
-  description: Swift / Kotlin / Android SDK / Java
+  description: Xamarin / Android (Java / Kotlin)
