--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,16 @@
 # Jobs
 # VP of Global Communications
-
+- company: Netwealth
+  position: Software Developer
+  duration: Sept, 2022 &mdash; Present
+  summary: <ul class="resume-item-list">
+            <li>Introduced new Encryption-Decryption for Netwealth Suite of Applications, facilitating secure data handling. Communicated with over 20 teams and integrated with 54+ applications to ensure seamless package integration.</li>
+            <li>Implemented generic Single Sign-On (SSO) authentication system compatible with various OpenID Connect providers such as Azure AD, ensuring quick onboarding for clients across different OIDC providers.</li>
+            <li>Contributed to the complete project lifecycle within an Agile environment, swiftly mastering Event-driven architecture and integrating Kafka into the project.</li>
+            <li>Enhanced and supported Identity and Access Management (IAM) related flows.</li>
+            <li>Monitored and swiftly resolved production incidents with rapid response.</li>
+            </ul>
+            
 - company: Zed Technologies
   position: Full-Stack Developer
   duration: Nov, 2019 &mdash; Jun, 2022
