--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -8,7 +8,7 @@
             <li>Implemented generic Single Sign-On (SSO) authentication system compatible with various OpenID Connect providers such as Azure AD, ensuring quick onboarding for clients across different OIDC providers.</li>
             <li>Contributed to the complete project lifecycle within an Agile environment, swiftly mastering Event-driven architecture and integrating Kafka into the project.</li>
             <li>Enhanced and supported Identity and Access Management (IAM) related flows.</li>
-            <li>Monitored and swiftly resolved production incidents with rapid response.</li>
+            <li>Monitored and independently resolved production incidents.</li>
             </ul>
             
 - company: Zed Technologies
